@@ -28,8 +28,8 @@ import java.util.function.Predicate;
 public class AddQuarkusMavenPluginGoalVisitor extends MavenIsoVisitor<ExecutionContext> {
     private static final Predicate<? super Xml.Tag> TAG_KEY_NAME_MATCHES = tag -> "goal".equals(tag.getName());
     private static final Predicate<? super Xml.Tag> TAG_HAS_CONTENT = tag -> tag.getContent() != null && tag.getContent().size() == 1;
-    private static final Predicate<? super Xml.Tag> TAG_CONTENT_IS_CHAR_DATA = tag -> tag.getContent().get(0) instanceof Xml.CharData;
-    private static final BiPredicate<? super Xml.Tag, String> TAG_CONTENT_MATCHES = (tag, str) -> ((Xml.CharData) tag.getContent().get(0)).getText().equals(str);
+    private static final Predicate<? super Xml.Tag> TAG_CONTENT_IS_CHAR_DATA = tag -> tag.getContent().getFirst() instanceof Xml.CharData;
+    private static final BiPredicate<? super Xml.Tag, String> TAG_CONTENT_MATCHES = (tag, str) -> ((Xml.CharData) tag.getContent().getFirst()).getText().equals(str);
 
     private final String goalName;
 
@@ -47,21 +47,21 @@ public class AddQuarkusMavenPluginGoalVisitor extends MavenIsoVisitor<ExecutionC
          */
         FindPlugin.find(document, "io.quarkus", "quarkus-maven-plugin").forEach(plugin -> {
             Optional<Xml.Tag> maybeExecutions = plugin.getChild("executions");
-            if (!maybeExecutions.isPresent()) {
+            if (maybeExecutions.isEmpty()) {
                 Xml.Tag executionsTag = Xml.Tag.build("<executions/>");
                 doAfterVisit(new AddToTagVisitor<>(plugin, executionsTag));
                 doAfterVisit(new AddQuarkusMavenPluginGoalVisitor(goalName));
             } else {
                 Xml.Tag executions = maybeExecutions.get();
                 Optional<Xml.Tag> maybeExecution = executions.getChildren().stream().filter(exe -> "execution".equals(exe.getName())).findFirst();
-                if (!maybeExecution.isPresent()) {
+                if (maybeExecution.isEmpty()) {
                     Xml.Tag executionTag = Xml.Tag.build("<execution/>");
                     doAfterVisit(new AddToTagVisitor<>(executions, executionTag));
                     doAfterVisit(new AddQuarkusMavenPluginGoalVisitor(goalName));
                 } else {
                     Xml.Tag execution = maybeExecution.get();
                     Optional<Xml.Tag> maybeGoals = execution.getChild("goals");
-                    if (!maybeGoals.isPresent()) {
+                    if (maybeGoals.isEmpty()) {
                         Xml.Tag goalsTag = Xml.Tag.build("<goals/>");
                         doAfterVisit(new AddToTagVisitor<>(execution, goalsTag));
                         doAfterVisit(new AddQuarkusMavenPluginGoalVisitor(goalName));
@@ -73,7 +73,7 @@ public class AddQuarkusMavenPluginGoalVisitor extends MavenIsoVisitor<ExecutionC
                                 .filter(TAG_CONTENT_IS_CHAR_DATA)
                                 .filter(t -> TAG_CONTENT_MATCHES.test(t, goalName))
                                 .findAny();
-                        if (!foundGoals.isPresent()) {
+                        if (foundGoals.isEmpty()) {
                             Xml.Tag goalsTag = Xml.Tag.build("<goal>" + goalName + "</goal>");
                             doAfterVisit(new AddToTagVisitor<>(goals, goalsTag));
                         }
